// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={true}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
        },
      ]
    }
  >
    <Grid
      gutter="md"
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                }
              }
            >
              <Card>
                <article
                  className="pf-c-card"
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-none"
                            component="small"
                          >
                            <small
                              className="margin-bottom-none"
                              data-pf-content={true}
                            >
                              External policy
                            </small>
                          </Text>
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                collapseText="Collapse"
                                expandText="Read more"
                                length={150}
                                lines={1}
                                text=""
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem>
                                      <div
                                        className="pf-l-stack__item"
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            Object {
                                              "__html": "",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </h4>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                transform=""
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Noncompliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            30
                             of 
                            40
                             rules passed (
                            75%
                            )
                          </small>
                        </Text>
                      </div>
                      <div
                        className="margin-bottom-md"
                      >
                        <Text
                          className="wrap-break-word"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <p
                            className="wrap-break-word"
                            data-pf-content={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            Profile 
                            <br />
                            <Truncate
                              collapseText="Collapse"
                              expandText="Read more"
                              length={150}
                              lines={1}
                              text=""
                            >
                              <Stack
                                className="ins-c-truncate is-block"
                              >
                                <div
                                  className="pf-l-stack ins-c-truncate is-block"
                                >
                                  <StackItem>
                                    <div
                                      className="pf-l-stack__item"
                                    >
                                      <span
                                        dangerouslySetInnerHTML={
                                          Object {
                                            "__html": "",
                                          }
                                        }
                                        widget-type="InsightsTruncateBlock"
                                      />
                                    </div>
                                  </StackItem>
                                </div>
                              </Stack>
                            </Truncate>
                          </p>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          Last scanned: 
                          <FormattedRelative
                            updateInterval={10000}
                            value={1551853213000}
                          >
                            <span>
                              last year
                            </span>
                          </FormattedRelative>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
        <GridItem
          key="0"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="1"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="2"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={false}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
        },
      ]
    }
  >
    <Grid
      gutter="md"
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                }
              }
            >
              <Card>
                <article
                  className="pf-c-card"
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-none"
                            component="small"
                          >
                            <small
                              className="margin-bottom-none"
                              data-pf-content={true}
                            >
                              External policy
                            </small>
                          </Text>
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                collapseText="Collapse"
                                expandText="Read more"
                                length={150}
                                lines={1}
                                text=""
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem>
                                      <div
                                        className="pf-l-stack__item"
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            Object {
                                              "__html": "",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </h4>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                transform=""
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Noncompliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            30
                             of 
                            40
                             rules passed (
                            75%
                            )
                          </small>
                        </Text>
                      </div>
                      <div
                        className="margin-bottom-md"
                      >
                        <Text
                          className="wrap-break-word"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <p
                            className="wrap-break-word"
                            data-pf-content={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            Profile 
                            <br />
                            <Truncate
                              collapseText="Collapse"
                              expandText="Read more"
                              length={150}
                              lines={1}
                              text=""
                            >
                              <Stack
                                className="ins-c-truncate is-block"
                              >
                                <div
                                  className="pf-l-stack ins-c-truncate is-block"
                                >
                                  <StackItem>
                                    <div
                                      className="pf-l-stack__item"
                                    >
                                      <span
                                        dangerouslySetInnerHTML={
                                          Object {
                                            "__html": "",
                                          }
                                        }
                                        widget-type="InsightsTruncateBlock"
                                      />
                                    </div>
                                  </StackItem>
                                </div>
                              </Stack>
                            </Truncate>
                          </p>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          Last scanned: 
                          <FormattedRelative
                            updateInterval={10000}
                            value={1551853213000}
                          >
                            <span>
                              last year
                            </span>
                          </FormattedRelative>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;
